--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,10 @@
 [build.environment]
   GO_IMPORT_PATH="github.com/rwboyer/dino-don-inc-11ty"
   GO_VERSION="1.17"
+
+[[redirects]]
+  from = "/jws"
+  to = "https://mccrery.cdox.cc/jws/hello/from/netlify"
+  status = 200
+  force = true
+  signed = "API_SIGNATURE_TOKEN_PLACEHOLDER"
